// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Forms.ColorPicker default props UU5.Forms.ColorPicker check default props 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="uuID-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker props function -> InputMixin onChange() 1`] = `
<ColorPicker
  id="checkID"
  message=""
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onValidate={[Function]}
  value=""
/>
`;

exports[`UU5.Forms.ColorPicker props function -> InputMixin onChange() 2`] = `
<ColorPicker
  feedback="success"
  id="checkID"
  message="Is valid."
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onValidate={[Function]}
  value="Testing react in jest"
/>
`;

exports[`UU5.Forms.ColorPicker props function -> InputMixin onChangeFeedback() 1`] = `
<ColorPicker
  id="checkID"
  message=""
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onValidate={[Function]}
  value=""
/>
`;

exports[`UU5.Forms.ColorPicker props function -> InputMixin onChangeFeedback() 2`] = `
<ColorPicker
  feedback="success"
  id="checkID"
  message="Is valid."
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onValidate={[Function]}
  value="Testing react in jest"
/>
`;

exports[`UU5.Forms.ColorPicker props function -> InputMixin onValidate() 1`] = `
<ColorPicker
  id="checkID"
  message=""
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onValidate={[Function]}
  value=""
/>
`;

exports[`UU5.Forms.ColorPicker props function -> InputMixin onValidate() 2`] = `
<ColorPicker
  feedback="success"
  id="checkID"
  message="Is valid."
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onValidate={[Function]}
  value="Testing react in jest"
/>
`;
